# ComfyUI-Janus-Pro

./: .gitignore  README.md  README_EN.md  __init__.py  myshell_ai_OpenVoiceV2.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: image_generation.py  image_understanding.py  model_loader.py
